Update Variable Subsetter notebook with no UAT collections.

--- a/test/variable-subsetter/VariableSubsetter_Regression.ipynb
+++ b/test/variable-subsetter/VariableSubsetter_Regression.ipynb
@@ -110,7 +110,16 @@
     "\n",
     "The variable subsetter is currently only configured for collections in UAT.\n",
     "\n",
-    "The granule selected is the smallest in the ATL08 collection, to improve performance of tests."
+    "**2023-05-11 - The tests in this notebook been disabled as there are currently no collections associated with the Variable Subsetter. ATL03 and ATL08 have recently been associated with the Trajectory Subsetter instead.**\n",
+    "\n",
+    "To re-enable these tests:\n",
+    "\n",
+    "* Associate a suitable UAT collection to the [UMM-S record for the variable-subsetter](https://mmt.uat.earthdata.nasa.gov/services/S1237976118-EEDTEST). This collection will likely be L2, and must be enabled for OPeNDAP (including related URLs in granule UMM-G records).\n",
+    "* Revert the change in the next cell to `var_subsetter_env`.\n",
+    "* Add the collection concept ID and granule concept ID for testing to the `var_subsetter_non_prod_information` cell.\n",
+    "* Enter a variable name in the single-variable `harmony.Request` instance.\n",
+    "* Create reference files for both requests and save them in the `reference_files` subdirectory (with the expected file names).\n",
+    "* Run the notebook locally before commiting any changes."
    ]
   },
   {
@@ -120,12 +129,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "var_subsetter_non_prod_information = {'collection': Collection(id='C1234714698-EEDTEST'),\n",
-    "                                      'granule_id': 'G1238479209-EEDTEST'}\n",
+    "var_subsetter_non_prod_information = {'collection': Collection(id='<enter collection concept ID>'),\n",
+    "                                      'granule_id': '<enter granule concept ID>'}\n",
     "\n",
-    "var_subsetter_env = {Environment.LOCAL: var_subsetter_non_prod_information,\n",
-    "                     Environment.SIT: var_subsetter_non_prod_information,\n",
-    "                     Environment.UAT: var_subsetter_non_prod_information}\n",
+    "var_subsetter_env = {}\n",
+    "# var_subsetter_env = {Environment.LOCAL: var_subsetter_non_prod_information,\n",
+    "#                      Environment.SIT: var_subsetter_non_prod_information,\n",
+    "#                      Environment.UAT: var_subsetter_non_prod_information}\n",
     "\n",
     "if harmony_environment in var_subsetter_env:\n",
     "    var_subsetter_info = var_subsetter_env[harmony_environment]\n",
@@ -138,13 +148,11 @@
    "id": "e8f58ea4-124f-4dc4-8039-81fb20cd02c7",
    "metadata": {},
    "source": [
-    "### Variable Subsetter request, no Int64 variables\n",
+    "### Variable Subsetter, single-variable request:\n",
     "\n",
-    "This request should retrieve the requested `/gt1l/land_segments/dem_h` variable alongside the following supporting variables:\n",
+    "**2023-05-11 - When this test is active a sample reference file will need to be created and added as `reference_files/var_subsetter_single_var_reference.nc4`.**\n",
     "\n",
-    "* `/gt1l/land_segments/delta_time`\n",
-    "* `/gt1l/land_segments/latitude`\n",
-    "* `/gt1l/land_segments/longitude`"
+    "This request should retrieve the requested variable and any required variables (e.g., coordinates, or dimension variables). When this test is reactivated for a new collection, the expected output variables should be listed here."
    ]
   },
   {
@@ -155,59 +163,20 @@
    "outputs": [],
    "source": [
     "if var_subsetter_info is not None:\n",
-    "    no_int64_file_name = 'var_subsetter_no_int64.nc4'\n",
-    "    no_int64_request = Request(collection=var_subsetter_info['collection'],\n",
-    "                               granule_id=[var_subsetter_info['granule_id']],\n",
-    "                               variables=['/gt1l/land_segments/dem_h'])\n",
+    "    single_var_file_name = 'var_subsetter.nc4'\n",
+    "    single_var_request = Request(collection=var_subsetter_info['collection'],\n",
+    "                                 granule_id=[var_subsetter_info['granule_id']],\n",
+    "                                 variables=['<enter variable full name>'])\n",
     "\n",
-    "    submit_and_download(harmony_client, no_int64_request, no_int64_file_name)\n",
-    "    assert exists(no_int64_file_name), 'Unsuccessful non-Int64 Variable Subsetter request.'\n",
+    "    submit_and_download(harmony_client, single_var_request, single_var_file_name)\n",
+    "    assert exists(single_var_file_name), 'Unsuccessful single-variable Variable Subsetter request.'\n",
     "\n",
-    "    compare_results_to_reference_file(no_int64_file_name,\n",
-    "                              'reference_files/var_subsetter_no_int64_reference.nc4')\n",
+    "    compare_results_to_reference_file(\n",
+    "        single_var_file_name,\n",
+    "        'reference_files/var_subsetter_single_var_reference.nc4'\n",
+    "    )\n",
     "\n",
-    "    print_success('Variable subsetter synchronous request.')\n",
-    "else:\n",
-    "    print(f'The Variable Subsetter is not configured for environment: \"{harmony_environment}\" - skipping test.')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "40e40229-3ff7-4d82-945b-af33703eb11c",
-   "metadata": {},
-   "source": [
-    "### Variable Subsetter request and Int64 variables\n",
-    "\n",
-    "This request should retrieve the `/gt1l/signal_photons/classed_pc_flag` variable and 6 supporting variables, some of which are Int64, which is not supported by the DAP2 protocol:\n",
-    "\n",
-    "* `/gt1l/signal_photons/delta_time`\n",
-    "* `/gt1l/land_segments/ph_ndx`\n",
-    "* `/gt1l/land_segments/n_seg_ph`\n",
-    "* `/gt1l/land_segments/delta_time`\n",
-    "* `/gt1l/land_segments/latitude`\n",
-    "* `/gt1l/land_segments/longitude`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41a3f8fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if var_subsetter_info is not None:\n",
-    "    int64_file_name = 'var_subsetter_int64.nc4'\n",
-    "    int64_request = Request(collection=var_subsetter_info['collection'],\n",
-    "                            granule_id=[var_subsetter_info['granule_id']],\n",
-    "                            variables=['/gt1l/signal_photons/classed_pc_flag'])\n",
-    "\n",
-    "    submit_and_download(harmony_client, int64_request, int64_file_name)\n",
-    "    assert exists(int64_file_name), 'Unsuccessful Int64 Variable Subsetter request.'\n",
-    "\n",
-    "    compare_results_to_reference_file(int64_file_name,\n",
-    "                              'reference_files/var_subsetter_int64_reference.nc4')\n",
-    "\n",
-    "    print_success('Variable Subsetter Int64 request.')\n",
+    "    print_success('Variable subsetter single variable request.')\n",
     "else:\n",
     "    print(f'The Variable Subsetter is not configured for environment: \"{harmony_environment}\" - skipping test.')"
    ]
@@ -221,7 +190,7 @@
     "\n",
     "Make a request for \"all\" variables. This should retrieve the entire file, with all the variables from the original source granule.\n",
     "\n",
-    "**2023-01-12: This test is currently disabled as the output contains a variable type for `/ancillary_data/control` that is not currently handled by OPeNDAP (an array of string types).**"
+    "**2023-05-11 - When this test is active a sample reference file will need to be created and added as `reference_files/var_subsetter_all_vars_reference.nc4`.**"
    ]
   },
   {
@@ -231,19 +200,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if var_subsetter_info is not None:\n",
-    "#     all_variables_file_name = 'var_subsetter_all_vars.nc4'\n",
-    "#     all_variables_request = Request(collection=var_subsetter_info['collection'],\n",
-    "#                                     granule_id=[var_subsetter_info['granule_id']])\n",
-    "#\n",
-    "#     submit_and_download(harmony_client, all_variables_request, all_variables_file_name)\n",
-    "#     assert exists(all_variables_file_name), 'Unsuccessful Variable Subsetter all variable request.'\n",
-    "# \n",
-    "#     compare_results_to_reference_file(all_variables_file_name, 'reference_files/to_be_retrieved...')\n",
-    "# \n",
-    "#     print_success('Variable Subsetter all variable request.')\n",
-    "# else:\n",
-    "#     print(f'The Variable Subsetter is not configured for environment: \"{harmony_environment}\" - skipping test.')"
+    "if var_subsetter_info is not None:\n",
+    "    all_variables_file_name = 'var_subsetter_all_vars.nc4'\n",
+    "    all_variables_request = Request(collection=var_subsetter_info['collection'],\n",
+    "                                    granule_id=[var_subsetter_info['granule_id']])\n",
+    "\n",
+    "    submit_and_download(harmony_client, all_variables_request, all_variables_file_name)\n",
+    "    assert exists(all_variables_file_name), 'Unsuccessful Variable Subsetter all-variable request.'\n",
+    "\n",
+    "    compare_results_to_reference_file(\n",
+    "        all_variables_file_name,\n",
+    "        'reference_files/var_subsetter_all_vars_reference.nc4'\n",
+    "    )\n",
+    "\n",
+    "    print_success('Variable Subsetter all variable request.')\n",
+    "else:\n",
+    "    print(f'The Variable Subsetter is not configured for environment: \"{harmony_environment}\" - skipping test.')"
    ]
   },
   {
