--- a/test/harmony-regression/HarmonyRegression.ipynb
+++ b/test/harmony-regression/HarmonyRegression.ipynb
@@ -9,9 +9,9 @@
     "\n",
     "## Prerequisites\n",
     "\n",
-    " The dependencies for this notebook are listed in the [environment.yaml](./environment.yaml). To test or install locally, create the papermill environment used in the automated regression testing suite: \n",
+    " The dependencies for this notebook are listed in the [environment.yaml](./environment.yaml). To test or install locally, create the papermill-<IMAGE> environment used in the automated regression testing suite: \n",
     "\n",
-    "`conda env create -f ./environment.yaml && conda activate papermill`\n",
+    "`conda env create -f ./environment.yaml && conda activate papermill-<IMAGE>`\n",
     "\n",
     "Also ensure you have a `.netrc` file located in the `test` directory of this repository."
    ]
