Updates regression for JPEG
DAS-1606

--- a/test/hybig/HyBIG-Regression.ipynb
+++ b/test/hybig/HyBIG-Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d6d392de",
+   "id": "32af63de",
    "metadata": {},
    "source": [
     "# Harmony Browse Image Service (HyBIG) regression tests\n",
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "2a1faa83",
+   "execution_count": null,
+   "id": "dec3bc66",
    "metadata": {
     "tags": [
      "parameters"
@@ -38,12 +38,12 @@
    },
    "outputs": [],
    "source": [
-    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
+    "harmony_host_url = 'https://harmony.sit.earthdata.nasa.gov'"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c59adb34",
+   "id": "802241b5",
    "metadata": {},
    "source": [
     "### Import required packages:"
@@ -51,19 +51,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "169deca1",
+   "execution_count": null,
+   "id": "295b8341",
    "metadata": {},
    "outputs": [],
    "source": [
     "from harmony import Collection, Environment, Client, Request\n",
+    "import rasterio\n",
+    "from rasterio.transform import Affine\n",
+    "from rasterio.crs import CRS\n",
     "from utility import  print_success \n",
-    "from pathlib import Path"
+    "from tempfile import TemporaryDirectory\n",
+    "from pathlib import Path\n",
+    "from numpy.testing import assert_array_almost_equal"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f80e1243",
+   "id": "9b644811",
    "metadata": {},
    "source": [
     "### Set up environment dependent variables:\n",
@@ -75,8 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "184ff665",
+   "execution_count": null,
+   "id": "437af5f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,33 +119,166 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "e5fbf1fc",
+   "cell_type": "markdown",
+   "id": "e696afee",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<harmony.harmony.Client at 0x1082c9180>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "harmony_client"
+    "# Test a request for PNG output\n",
+    "\n",
+    "Forms a request for ASTER data as 'image/png', ensures all files are created that the image has the correct metadata and that that the data in the png file matches the reference data in the test."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d0109ba",
+   "id": "cc7d75c5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if environment_information is not None:\n",
+    "    aster_request = Request(collection=environment_information['aster_collection'],\n",
+    "                           granule_id=environment_information['aster_granules'][0],\n",
+    "                            format='image/png')                       \n",
+    "    aster_job_id = harmony_client.submit(aster_request)\n",
+    "    harmony_client.wait_for_processing(aster_job_id, show_progress=True)\n",
+    "\n",
+    "\n",
+    "    expected_files = ['ASTGTMV003_N00E022_dem.png',\n",
+    "                      'ASTGTMV003_N00E022_dem.pgw',\n",
+    "                      'ASTGTMV003_N00E022_dem.png.aux.xml']\n",
+    "\n",
+    "\n",
+    "    with TemporaryDirectory() as temp_dir:\n",
+    "        downloaded_grid_outputs = [\n",
+    "            file_future.result()\n",
+    "            for file_future\n",
+    "            in harmony_client.download_all(aster_job_id, overwrite=True, directory=temp_dir)\n",
+    "        ]\n",
+    "        \n",
+    "        \n",
+    "        reference_dir = Path('./regression_data')\n",
+    "\n",
+    "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
+    "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
+    "\n",
+    "        for file_name in test_files:\n",
+    "            assert file_name.exists() == True, f'File does not exist {file_name.resolve()}'\n",
+    "        print_success('all test files generated')\n",
+    "\n",
+    "        expected_output_metadata = {'driver': 'PNG',\n",
+    "                                    'dtype': 'uint8',\n",
+    "                                    'nodata': None,\n",
+    "                                    'width': 3601,\n",
+    "                                    'height': 3601,\n",
+    "                                    'count': 4,\n",
+    "                                    'crs': CRS.from_epsg(4326),\n",
+    "                                    'transform': Affine(0.000277777777777778, 0.0, 21.9998611111111,\n",
+    "                                                        0.0, -0.000277777777777778, 1.00013888888889)}\n",
+    "\n",
+    "        test_dataset = rasterio.open(test_files[0])\n",
+    "        assert test_dataset.meta == expected_output_metadata, 'output PNG has incorrect metadata'\n",
+    "        print_success('Generated image has correct metadata.')\n",
+    "\n",
+    "        reference_dataset = rasterio.open(reference_files[0])\n",
+    "\n",
+    "        ref_image = reference_dataset.read()\n",
+    "        test_image = test_dataset.read()\n",
+    "        assert_array_almost_equal(ref_image, test_image)\n",
+    "        print_success('Generated image contains correct data.')\n",
+    "\n",
+    "\n",
+    "    print_success('Conversion of ASTER Geotiff Success')\n",
+    "else:\n",
+    "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1edc6d53",
+   "metadata": {},
+   "source": [
+    "# Test a request for JPG output\n",
+    "\n",
+    "Forms a request for ASTER data as 'image/png', ensures all files are created that the image has the correct metadata and that that the data in the png file matches the reference data in the test.\n",
+    "\n",
+    "*This test has to fix the downloaded aux.xml file becuase it is downloaded as gzipped but named as if it is not*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa3ec02c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "if environment_information is not None:\n",
+    "    aster_request = Request(collection=environment_information['aster_collection'],\n",
+    "                           granule_id=environment_information['aster_granules'][0],\n",
+    "                            format='image/jpeg')      \n",
+    "    aster_job_id = harmony_client.submit(aster_request)\n",
+    "    harmony_client.wait_for_processing(aster_job_id, show_progress=True)\n",
+    "\n",
+    "\n",
+    "    expected_files = ['ASTGTMV003_N00E022_dem.jpg',\n",
+    "                      'ASTGTMV003_N00E022_dem.jgw',\n",
+    "                      'ASTGTMV003_N00E022_dem.jpg.aux.xml']\n",
+    "\n",
+    "\n",
+    "    with TemporaryDirectory() as temp_dir:\n",
+    "        downloaded_grid_outputs = [\n",
+    "            file_future.result()\n",
+    "            for file_future\n",
+    "            in harmony_client.download_all(aster_job_id, overwrite=True, directory=temp_dir)\n",
+    "        ]\n",
+    "     \n",
+    "        reference_dir = Path('./regression_data')\n",
+    "\n",
+    "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
+    "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
+    "        \n",
+    "\n",
+    "        for file_name in test_files:\n",
+    "            assert file_name.exists() == True, f'File does not exist {file_name.resolve()}'\n",
+    "        print_success('all test files generated')\n",
+    "\n",
+    "        # AWKWARD work around\n",
+    "        # rename and then unzip the downloaded file back into it's downloaded name\n",
+    "        import gzip\n",
+    "        import shutil\n",
+    "        gzfile = test_files[-1].rename(test_files[-1].with_suffix(test_files[-1].suffix + '.gz'))    \n",
+    "        with gzip.open(gzfile, 'rb') as f_in:\n",
+    "            with open(test_files[-1], 'wb') as f_out:\n",
+    "                shutil.copyfileobj(f_in, f_out)\n",
+    "\n",
+    "\n",
+    "\n",
+    "        expected_output_metadata = {'driver': 'JPEG',\n",
+    "                                    'dtype': 'uint8',\n",
+    "                                    'nodata': None,\n",
+    "                                    'width': 3601,\n",
+    "                                    'height': 3601,\n",
+    "                                    'count': 3,\n",
+    "                                    'crs': CRS.from_epsg(4326),\n",
+    "                                    'transform': Affine(0.000277777777777778, 0.0, 21.9998611111111,\n",
+    "                                                        0.0, -0.000277777777777778, 1.00013888888889)}\n",
+    "\n",
+    "        test_dataset = rasterio.open(test_files[0])\n",
+    "        assert test_dataset.meta == expected_output_metadata, 'output JPEG has incorrect metadata'\n",
+    "        print_success('Generated image has correct metadata.')\n",
+    "\n",
+    "        reference_dataset = rasterio.open(reference_files[0])\n",
+    "\n",
+    "        ref_image = reference_dataset.read()\n",
+    "        test_image = test_dataset.read()\n",
+    "        assert_array_almost_equal(ref_image, test_image)\n",
+    "        print_success('Generated image contains correct data.')\n",
+    "\n",
+    "\n",
+    "    print_success('Conversion of ASTER Geotiff Success')\n",
+    "else:\n",
+    "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
+   ]
   }
  ],
  "metadata": {
