Adds MEaSUREs tests for triband geotiff input.
DAS-1606

--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "This Jupyter notebook runs a suite of regression tests against some requests against the Harmony Browse Image Service.\n",
     "\n",
-    "These tests use The ASTER Global Digital Elevation Model (GDEM) Version 3 ([ASTGTM](https://lpdaac.usgs.gov/products/astgtmv003/)) as input GeoTIFF data to test the HyBIG service.\n",
+    "These tests use ASTER Global Digital Elevation Model (GDEM) Version 3 ([ASTGTM](https://cmr.uat.earthdata.nasa.gov/search/concepts/C1256584478-EEDTEST)) as GeoTIFF input data to test the HyBIG service for an image with no color information.\n",
+    "\n",
+    "These tests use MEaSUREs Vegetation Continuous Fields (VCF) Yearly Global 0.05 Deg V001 ([VCF5KYR](https://cmr.uat.earthdata.nasa.gov/search/concepts/C1258119317-EEDTEST)) as GeoTIFF input data to test the HyBIG service against RGB color banded input.\n",
     "\n",
     "## Set the Harmony environment:\n",
     "\n",
@@ -86,11 +88,13 @@
    "outputs": [],
    "source": [
     "non_production_collection = {\n",
-    "    'aster_collection': Collection(id='C1256584478-EEDTEST')\n",
+    "    'aster_collection': Collection(id='C1256584478-EEDTEST'),\n",
+    "    'measures_collection': Collection(id='C1258119317-EEDTEST')\n",
     "}\n",
     "\n",
     "non_prod_granule_data = {\n",
-    "    'aster_granules': ['G1256584570-EEDTEST']\n",
+    "    'aster_granules': ['G1256584570-EEDTEST'],\n",
+    "    'measures_granules': ['G1258119387-EEDTEST']\n",
     "}\n",
     "\n",
     "collection_data = {\n",
@@ -123,9 +127,9 @@
    "id": "e696afee",
    "metadata": {},
    "source": [
-    "# Test a request for PNG output\n",
+    "### Test a request for PNG output from a 1-band GeoTIFF with no color information\n",
     "\n",
-    "Forms a request for ASTER data as 'image/png', ensures all files are created that the image has the correct metadata and that that the data in the png file matches the reference data in the test."
+    "Forms a request for ASTER data (1-band with no color info) as 'image/png', ensures all files are created that the image has the correct metadata and that that the data in the png file matches the reference data in the test."
    ]
   },
   {
@@ -187,7 +191,7 @@
     "        print_success('Generated image contains correct data.')\n",
     "\n",
     "\n",
-    "    print_success('Conversion of ASTER Geotiff Success')\n",
+    "    print_success('Conversion of ASTER Geotiff to PNG Success')\n",
     "else:\n",
     "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
    ]
@@ -197,7 +201,7 @@
    "id": "1edc6d53",
    "metadata": {},
    "source": [
-    "# Test a request for JPG output\n",
+    "### Test a request for JPG output from a 1-band GeoTIFF with no color information\n",
     "\n",
     "Forms a request for ASTER data as 'image/png', ensures all files are created that the image has the correct metadata and that that the data in the png file matches the reference data in the test.\n",
     "\n",
@@ -242,17 +246,6 @@
     "            assert file_name.exists() == True, f'File does not exist {file_name.resolve()}'\n",
     "        print_success('all test files generated')\n",
     "\n",
-    "        # AWKWARD work around\n",
-    "        # rename and then unzip the downloaded file back into it's downloaded name\n",
-    "        import gzip\n",
-    "        import shutil\n",
-    "        gzfile = test_files[-1].rename(test_files[-1].with_suffix(test_files[-1].suffix + '.gz'))    \n",
-    "        with gzip.open(gzfile, 'rb') as f_in:\n",
-    "            with open(test_files[-1], 'wb') as f_out:\n",
-    "                shutil.copyfileobj(f_in, f_out)\n",
-    "\n",
-    "\n",
-    "\n",
     "        expected_output_metadata = {'driver': 'JPEG',\n",
     "                                    'dtype': 'uint8',\n",
     "                                    'nodata': None,\n",
@@ -275,7 +268,175 @@
     "        print_success('Generated image contains correct data.')\n",
     "\n",
     "\n",
-    "    print_success('Conversion of ASTER Geotiff Success')\n",
+    "    print_success('Conversion of ASTER Geotiff to JPEG Success')\n",
+    "else:\n",
+    "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db7075c7",
+   "metadata": {},
+   "source": [
+    "### Test a request for PNG output from 3-Band RGB input data\n",
+    "\n",
+    "Forms a request for MEaSUREs VCF5KYR data (3-band RGB GeoTiff) as 'image/png', ensures all files are created that the image has the correct metadata and that that the data in the png file matches the reference data in the test."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94f40d81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "    measures_request = Request(collection=environment_information['measures_collection'],\n",
+    "                               granule_id=environment_information['measures_granules'][0],\n",
+    "                               format='image/png')                       \n",
+    "\n",
+    "    measures_job_id = harmony_client.submit(measures_request)\n",
+    "    harmony_client.wait_for_processing(measures_job_id, show_progress=True)\n",
+    "\n",
+    "\n",
+    "    expected_files = ['VCF5KYR_1991001_001_2018224205008.png',\n",
+    "                      'VCF5KYR_1991001_001_2018224205008.pgw',\n",
+    "                      'VCF5KYR_1991001_001_2018224205008.png.aux.xml']\n",
+    "\n",
+    "\n",
+    "    with TemporaryDirectory() as temp_dir:\n",
+    "        downloaded_grid_outputs = [\n",
+    "            file_future.result()\n",
+    "            for file_future\n",
+    "            in harmony_client.download_all(measures_job_id, overwrite=True, directory=temp_dir)\n",
+    "        ]\n",
+    "        \n",
+    "        reference_dir = Path('./regression_data')\n",
+    "\n",
+    "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
+    "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
+    "\n",
+    "        for file_name in test_files:\n",
+    "            assert file_name.exists() == True, f'File does not exist {file_name.resolve()}'\n",
+    "        print_success('all test files generated')\n",
+    "\n",
+    "        expected_output_metadata = {\n",
+    "            'driver': 'PNG',\n",
+    "            'dtype': 'uint8',\n",
+    "            'nodata': None,\n",
+    "            'width': 7200,\n",
+    "            'height': 3600,\n",
+    "            'count': 3,\n",
+    "            'crs': CRS.from_wkt('GEOGCS[\"Unknown datum based upon the Clarke 1866 ellipsoid\",'\n",
+    "                                'DATUM[\"Not_specified_based_on_Clarke_1866_spheroid\",'\n",
+    "                                'SPHEROID[\"Clarke 1866\",6378206.4,294.978698213898,'\n",
+    "                                'AUTHORITY[\"EPSG\",\"7008\"]]],'\n",
+    "                                'PRIMEM[\"Greenwich\",0],'\n",
+    "                                'UNIT[\"degree\",0.0174532925199433,'\n",
+    "                                'AUTHORITY[\"EPSG\",\"9122\"]],AXIS[\"Latitude\",NORTH],AXIS[\"Longitude\",EAST]]'),\n",
+    "            'transform': Affine(0.05000000000000001, 0.0, -180.0,\n",
+    "                                0.0, -0.05000000000000001, 90.0)\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "\n",
+    "        test_dataset = rasterio.open(test_files[0])\n",
+    "        assert test_dataset.meta == expected_output_metadata, 'output PNG has incorrect metadata'\n",
+    "        print_success('Generated image has correct metadata.')\n",
+    "\n",
+    "        reference_dataset = rasterio.open(reference_files[0])\n",
+    "\n",
+    "        ref_image = reference_dataset.read()\n",
+    "        test_image = test_dataset.read()\n",
+    "        assert_array_almost_equal(ref_image, test_image)\n",
+    "        print_success('Generated image contains correct data.')\n",
+    "\n",
+    "\n",
+    "    print_success('Conversion of MEaSUREs Geotiff to PNG Success')\n",
+    "else:\n",
+    "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab9d4370",
+   "metadata": {},
+   "source": [
+    "### Test a request for JPEG output from 3-Band RGB input data\n",
+    "\n",
+    "Forms a request for MEaSUREs VCF5KYR data (3-band RGB GeoTiff) as 'image/jpg', ensures all files are created that the image has the correct metadata and that that the data in the JPEG file matches the reference data in the test."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "388b675a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if environment_information is not None:\n",
+    "    measures_request = Request(collection=environment_information['measures_collection'],\n",
+    "                               granule_id=environment_information['measures_granules'][0],\n",
+    "                               format='image/jpeg')                       \n",
+    "\n",
+    "    measures_job_id = harmony_client.submit(measures_request)\n",
+    "    harmony_client.wait_for_processing(measures_job_id, show_progress=True)\n",
+    "\n",
+    "\n",
+    "    expected_files = ['VCF5KYR_1991001_001_2018224205008.jpg',\n",
+    "                      'VCF5KYR_1991001_001_2018224205008.jgw',\n",
+    "                      'VCF5KYR_1991001_001_2018224205008.jpg.aux.xml']\n",
+    "\n",
+    "\n",
+    "    with TemporaryDirectory() as temp_dir:\n",
+    "        downloaded_grid_outputs = [\n",
+    "            file_future.result()\n",
+    "            for file_future\n",
+    "            in harmony_client.download_all(measures_job_id, overwrite=True, directory=temp_dir)\n",
+    "        ]\n",
+    "        \n",
+    "        reference_dir = Path('./regression_data')\n",
+    "\n",
+    "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
+    "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
+    "\n",
+    "        for file_name in test_files:\n",
+    "            assert file_name.exists() == True, f'File does not exist {file_name.resolve()}'\n",
+    "        print_success('all test files generated')\n",
+    "\n",
+    "        expected_output_metadata = {\n",
+    "            'driver': 'JPEG',\n",
+    "            'dtype': 'uint8',\n",
+    "            'nodata': None,\n",
+    "            'width': 7200,\n",
+    "            'height': 3600,\n",
+    "            'count': 3,\n",
+    "            'crs': CRS.from_wkt('GEOGCS[\"Unknown datum based upon the Clarke 1866 ellipsoid\",'\n",
+    "                                'DATUM[\"Not_specified_based_on_Clarke_1866_spheroid\",'\n",
+    "                                'SPHEROID[\"Clarke 1866\",6378206.4,294.978698213898,'\n",
+    "                                'AUTHORITY[\"EPSG\",\"7008\"]]],'\n",
+    "                                'PRIMEM[\"Greenwich\",0],'\n",
+    "                                'UNIT[\"degree\",0.0174532925199433,'\n",
+    "                                'AUTHORITY[\"EPSG\",\"9122\"]],AXIS[\"Latitude\",NORTH],AXIS[\"Longitude\",EAST]]'),\n",
+    "            'transform': Affine(0.05000000000000001, 0.0, -180.0,\n",
+    "                                0.0, -0.05000000000000001, 90.0)\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "\n",
+    "        test_dataset = rasterio.open(test_files[0])\n",
+    "        assert test_dataset.meta == expected_output_metadata, 'output JPEG has incorrect metadata'\n",
+    "        print_success('Generated image has correct metadata.')\n",
+    "\n",
+    "        reference_dataset = rasterio.open(reference_files[0])\n",
+    "\n",
+    "        ref_image = reference_dataset.read()\n",
+    "        test_image = test_dataset.read()\n",
+    "        assert_array_almost_equal(ref_image, test_image)\n",
+    "        print_success('Generated image contains correct data.')\n",
+    "\n",
+    "\n",
+    "    print_success('Conversion of MEaSUREs Geotiff to JPEG Success')\n",
     "else:\n",
     "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
    ]
