Address PR feedback
Update harmony-py version requirements
Rename regression_data -> reference_data
Set correct default test URL

DAS-1606

--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -40,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "harmony_host_url = 'https://harmony.sit.earthdata.nasa.gov'"
+    "harmony_host_url = 'https://harmony.uat.earthdata.nasa.gov'"
    ]
   },
   {
@@ -160,7 +160,7 @@
     "        ]\n",
     "        \n",
     "        \n",
-    "        reference_dir = Path('./regression_data')\n",
+    "        reference_dir = Path('./reference_data')\n",
     "\n",
     "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
     "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
@@ -236,7 +236,7 @@
     "            in harmony_client.download_all(aster_job_id, overwrite=True, directory=temp_dir)\n",
     "        ]\n",
     "     \n",
-    "        reference_dir = Path('./regression_data')\n",
+    "        reference_dir = Path('./reference_data')\n",
     "\n",
     "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
     "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
@@ -311,7 +311,7 @@
     "            in harmony_client.download_all(measures_job_id, overwrite=True, directory=temp_dir)\n",
     "        ]\n",
     "        \n",
-    "        reference_dir = Path('./regression_data')\n",
+    "        reference_dir = Path('./reference_data')\n",
     "\n",
     "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
     "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "388b675a",
+   "id": "56bb7ba2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
     "            in harmony_client.download_all(measures_job_id, overwrite=True, directory=temp_dir)\n",
     "        ]\n",
     "        \n",
-    "        reference_dir = Path('./regression_data')\n",
+    "        reference_dir = Path('./reference_data')\n",
     "\n",
     "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
     "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
@@ -440,6 +440,14 @@
     "else:\n",
     "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "132e50db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
