Removes incorrect comment about workaround
DAS-1606

--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -65,7 +65,8 @@
     "from utility import  print_success \n",
     "from tempfile import TemporaryDirectory\n",
     "from pathlib import Path\n",
-    "from numpy.testing import assert_array_almost_equal"
+    "from numpy.testing import assert_array_almost_equal\n",
+    "reference_dir = Path('./reference_data')"
    ]
   },
   {
@@ -146,7 +147,6 @@
     "    aster_job_id = harmony_client.submit(aster_request)\n",
     "    harmony_client.wait_for_processing(aster_job_id, show_progress=True)\n",
     "\n",
-    "\n",
     "    expected_files = ['ASTGTMV003_N00E022_dem.png',\n",
     "                      'ASTGTMV003_N00E022_dem.pgw',\n",
     "                      'ASTGTMV003_N00E022_dem.png.aux.xml']\n",
@@ -159,8 +159,6 @@
     "            in harmony_client.download_all(aster_job_id, overwrite=True, directory=temp_dir)\n",
     "        ]\n",
     "        \n",
-    "        \n",
-    "        reference_dir = Path('./reference_data')\n",
     "\n",
     "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
     "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
@@ -203,9 +201,7 @@
    "source": [
     "### Test a request for JPG output from a 1-band GeoTIFF with no color information\n",
     "\n",
-    "Forms a request for ASTER data as 'image/png', ensures all files are created that the image has the correct metadata and that that the data in the png file matches the reference data in the test.\n",
-    "\n",
-    "*This test has to fix the downloaded aux.xml file becuase it is downloaded as gzipped but named as if it is not*"
+    "Forms a request for ASTER data as 'image/png', ensures all files are created that the image has the correct metadata and that that the data in the png file matches the reference data in the test.\n"
    ]
   },
   {
@@ -235,8 +231,6 @@
     "            for file_future\n",
     "            in harmony_client.download_all(aster_job_id, overwrite=True, directory=temp_dir)\n",
     "        ]\n",
-    "     \n",
-    "        reference_dir = Path('./reference_data')\n",
     "\n",
     "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
     "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
@@ -311,8 +305,6 @@
     "            in harmony_client.download_all(measures_job_id, overwrite=True, directory=temp_dir)\n",
     "        ]\n",
     "        \n",
-    "        reference_dir = Path('./reference_data')\n",
-    "\n",
     "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
     "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
     "\n",
@@ -395,8 +387,6 @@
     "            in harmony_client.download_all(measures_job_id, overwrite=True, directory=temp_dir)\n",
     "        ]\n",
     "        \n",
-    "        reference_dir = Path('./reference_data')\n",
-    "\n",
     "        test_files = list(map(lambda fn: Path(temp_dir) / fn, expected_files))\n",
     "        reference_files = list(map(lambda fn: reference_dir / fn, expected_files))\n",
     "\n",
