--- a/test/hybig/HyBIG_Regression.ipynb
+++ b/test/hybig/HyBIG_Regression.ipynb
@@ -62,7 +62,7 @@
     "import rasterio\n",
     "from rasterio.transform import Affine\n",
     "from rasterio.crs import CRS\n",
-    "from utility import  print_success \n",
+    "from utility import  print_success, assert_dataset_produced_correct_results\n",
     "from tempfile import TemporaryDirectory\n",
     "from pathlib import Path\n",
     "from numpy.testing import assert_array_almost_equal\n",
@@ -125,6 +125,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c668ac0c",
+   "metadata": {},
+   "source": [
+    "## Test input GeoTIFF with no color information\n",
+    "use ASTER data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2eb03ad7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "common_aster_metadata = {\n",
+    "    'dtype': 'uint8',\n",
+    "    'nodata': None,\n",
+    "    'width': 3601,\n",
+    "    'height': 3601,\n",
+    "    'crs': CRS.from_epsg(4326),\n",
+    "    'transform': Affine(0.000277777777777778, 0.0, 21.9998611111111,\n",
+    "                        0.0, -0.000277777777777778, 1.00013888888889)\n",
+    "}\n",
+    "aster_basename = 'ASTGTMV003_N00E022_dem'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e696afee",
    "metadata": {},
    "source": [
@@ -167,28 +195,14 @@
     "            assert file_name.exists() == True, f'File does not exist {file_name.resolve()}'\n",
     "        print_success('all test files generated')\n",
     "\n",
-    "        expected_output_metadata = {'driver': 'PNG',\n",
-    "                                    'dtype': 'uint8',\n",
-    "                                    'nodata': None,\n",
-    "                                    'width': 3601,\n",
-    "                                    'height': 3601,\n",
-    "                                    'count': 4,\n",
-    "                                    'crs': CRS.from_epsg(4326),\n",
-    "                                    'transform': Affine(0.000277777777777778, 0.0, 21.9998611111111,\n",
-    "                                                        0.0, -0.000277777777777778, 1.00013888888889)}\n",
-    "\n",
-    "        test_dataset = rasterio.open(test_files[0])\n",
-    "        assert test_dataset.meta == expected_output_metadata, 'output PNG has incorrect metadata'\n",
-    "        print_success('Generated image has correct metadata.')\n",
-    "\n",
-    "        reference_dataset = rasterio.open(reference_files[0])\n",
-    "\n",
-    "        ref_image = reference_dataset.read()\n",
-    "        test_image = test_dataset.read()\n",
-    "        assert_array_almost_equal(ref_image, test_image)\n",
-    "        print_success('Generated image contains correct data.')\n",
-    "\n",
-    "\n",
+    "        expected_output_metadata = {\n",
+    "            'driver': 'PNG', **common_aster_metadata, 'count': 4\n",
+    "        }\n",
+    "         \n",
+    "        assert_dataset_produced_correct_results(\n",
+    "            test_files[0], expected_output_metadata, reference_files[0], 'PNG'\n",
+    "        )\n",
+    "        \n",
     "    print_success('Conversion of ASTER Geotiff to PNG Success')\n",
     "else:\n",
     "    print('Skipping test: HyBIG regression tests not configured for this environment.')"
@@ -240,27 +254,13 @@
     "            assert file_name.exists() == True, f'File does not exist {file_name.resolve()}'\n",
     "        print_success('all test files generated')\n",
     "\n",
-    "        expected_output_metadata = {'driver': 'JPEG',\n",
-    "                                    'dtype': 'uint8',\n",
-    "                                    'nodata': None,\n",
-    "                                    'width': 3601,\n",
-    "                                    'height': 3601,\n",
-    "                                    'count': 3,\n",
-    "                                    'crs': CRS.from_epsg(4326),\n",
-    "                                    'transform': Affine(0.000277777777777778, 0.0, 21.9998611111111,\n",
-    "                                                        0.0, -0.000277777777777778, 1.00013888888889)}\n",
+    "        expected_output_metadata = {\n",
+    "            'driver': 'JPEG', **common_aster_metadata, 'count': 3\n",
+    "        }\n",
     "\n",
-    "        test_dataset = rasterio.open(test_files[0])\n",
-    "        assert test_dataset.meta == expected_output_metadata, 'output JPEG has incorrect metadata'\n",
-    "        print_success('Generated image has correct metadata.')\n",
-    "\n",
-    "        reference_dataset = rasterio.open(reference_files[0])\n",
-    "\n",
-    "        ref_image = reference_dataset.read()\n",
-    "        test_image = test_dataset.read()\n",
-    "        assert_array_almost_equal(ref_image, test_image)\n",
-    "        print_success('Generated image contains correct data.')\n",
-    "\n",
+    "        assert_dataset_produced_correct_results(\n",
+    "            test_files[0], expected_output_metadata, reference_files[0], 'JPEG'\n",
+    "        )\n",
     "\n",
     "    print_success('Conversion of ASTER Geotiff to JPEG Success')\n",
     "else:\n",
@@ -269,10 +269,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa5b3c03",
+   "metadata": {},
+   "source": [
+    "### Test request from 3-band RGB input geoTIFF\n",
+    "\n",
+    "Use MEaSUREs VCF5KYR data (3-band RGB GeoTiff)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dc35b04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "common_measures_metadata = {\n",
+    "    'dtype': 'uint8',\n",
+    "    'nodata': None,\n",
+    "    'width': 7200,\n",
+    "    'height': 3600,\n",
+    "    'count': 3,\n",
+    "    'crs': CRS.from_wkt('GEOGCS[\"Unknown datum based upon the Clarke 1866 ellipsoid\",'\n",
+    "                        'DATUM[\"Not_specified_based_on_Clarke_1866_spheroid\",'\n",
+    "                        'SPHEROID[\"Clarke 1866\",6378206.4,294.978698213898,'\n",
+    "                        'AUTHORITY[\"EPSG\",\"7008\"]]],'\n",
+    "                        'PRIMEM[\"Greenwich\",0],'\n",
+    "                        'UNIT[\"degree\",0.0174532925199433,'\n",
+    "                        'AUTHORITY[\"EPSG\",\"9122\"]],AXIS[\"Latitude\",NORTH],AXIS[\"Longitude\",EAST]]'),\n",
+    "    'transform': Affine(0.05000000000000001, 0.0, -180.0,\n",
+    "                        0.0, -0.05000000000000001, 90.0)\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "db7075c7",
    "metadata": {},
    "source": [
-    "### Test a request for PNG output from 3-Band RGB input data\n",
+    "#### Test a request for PNG output from 3-Band RGB input data\n",
     "\n",
     "Forms a request for MEaSUREs VCF5KYR data (3-band RGB GeoTiff) as 'image/png', ensures all files are created that the image has the correct metadata and that that the data in the png file matches the reference data in the test."
    ]
@@ -292,11 +327,9 @@
     "    measures_job_id = harmony_client.submit(measures_request)\n",
     "    harmony_client.wait_for_processing(measures_job_id, show_progress=True)\n",
     "\n",
-    "\n",
     "    expected_files = ['VCF5KYR_1991001_001_2018224205008.png',\n",
     "                      'VCF5KYR_1991001_001_2018224205008.pgw',\n",
     "                      'VCF5KYR_1991001_001_2018224205008.png.aux.xml']\n",
-    "\n",
     "\n",
     "    with TemporaryDirectory() as temp_dir:\n",
     "        downloaded_grid_outputs = [\n",
@@ -310,39 +343,16 @@
     "\n",
     "        for file_name in test_files:\n",
     "            assert file_name.exists() == True, f'File does not exist {file_name.resolve()}'\n",
+    "    \n",
     "        print_success('all test files generated')\n",
     "\n",
     "        expected_output_metadata = {\n",
-    "            'driver': 'PNG',\n",
-    "            'dtype': 'uint8',\n",
-    "            'nodata': None,\n",
-    "            'width': 7200,\n",
-    "            'height': 3600,\n",
-    "            'count': 3,\n",
-    "            'crs': CRS.from_wkt('GEOGCS[\"Unknown datum based upon the Clarke 1866 ellipsoid\",'\n",
-    "                                'DATUM[\"Not_specified_based_on_Clarke_1866_spheroid\",'\n",
-    "                                'SPHEROID[\"Clarke 1866\",6378206.4,294.978698213898,'\n",
-    "                                'AUTHORITY[\"EPSG\",\"7008\"]]],'\n",
-    "                                'PRIMEM[\"Greenwich\",0],'\n",
-    "                                'UNIT[\"degree\",0.0174532925199433,'\n",
-    "                                'AUTHORITY[\"EPSG\",\"9122\"]],AXIS[\"Latitude\",NORTH],AXIS[\"Longitude\",EAST]]'),\n",
-    "            'transform': Affine(0.05000000000000001, 0.0, -180.0,\n",
-    "                                0.0, -0.05000000000000001, 90.0)\n",
+    "            'driver': 'PNG', **common_measures_metadata\n",
     "        }\n",
     "\n",
-    "\n",
-    "\n",
-    "        test_dataset = rasterio.open(test_files[0])\n",
-    "        assert test_dataset.meta == expected_output_metadata, 'output PNG has incorrect metadata'\n",
-    "        print_success('Generated image has correct metadata.')\n",
-    "\n",
-    "        reference_dataset = rasterio.open(reference_files[0])\n",
-    "\n",
-    "        ref_image = reference_dataset.read()\n",
-    "        test_image = test_dataset.read()\n",
-    "        assert_array_almost_equal(ref_image, test_image)\n",
-    "        print_success('Generated image contains correct data.')\n",
-    "\n",
+    "        assert_dataset_produced_correct_results(\n",
+    "            test_files[0], expected_output_metadata, reference_files[0], 'PNG'\n",
+    "        )\n",
     "\n",
     "    print_success('Conversion of MEaSUREs Geotiff to PNG Success')\n",
     "else:\n",
@@ -374,11 +384,9 @@
     "    measures_job_id = harmony_client.submit(measures_request)\n",
     "    harmony_client.wait_for_processing(measures_job_id, show_progress=True)\n",
     "\n",
-    "\n",
     "    expected_files = ['VCF5KYR_1991001_001_2018224205008.jpg',\n",
     "                      'VCF5KYR_1991001_001_2018224205008.jgw',\n",
     "                      'VCF5KYR_1991001_001_2018224205008.jpg.aux.xml']\n",
-    "\n",
     "\n",
     "    with TemporaryDirectory() as temp_dir:\n",
     "        downloaded_grid_outputs = [\n",
@@ -395,36 +403,12 @@
     "        print_success('all test files generated')\n",
     "\n",
     "        expected_output_metadata = {\n",
-    "            'driver': 'JPEG',\n",
-    "            'dtype': 'uint8',\n",
-    "            'nodata': None,\n",
-    "            'width': 7200,\n",
-    "            'height': 3600,\n",
-    "            'count': 3,\n",
-    "            'crs': CRS.from_wkt('GEOGCS[\"Unknown datum based upon the Clarke 1866 ellipsoid\",'\n",
-    "                                'DATUM[\"Not_specified_based_on_Clarke_1866_spheroid\",'\n",
-    "                                'SPHEROID[\"Clarke 1866\",6378206.4,294.978698213898,'\n",
-    "                                'AUTHORITY[\"EPSG\",\"7008\"]]],'\n",
-    "                                'PRIMEM[\"Greenwich\",0],'\n",
-    "                                'UNIT[\"degree\",0.0174532925199433,'\n",
-    "                                'AUTHORITY[\"EPSG\",\"9122\"]],AXIS[\"Latitude\",NORTH],AXIS[\"Longitude\",EAST]]'),\n",
-    "            'transform': Affine(0.05000000000000001, 0.0, -180.0,\n",
-    "                                0.0, -0.05000000000000001, 90.0)\n",
+    "            'driver': 'JPEG', **common_measures_metadata\n",
     "        }\n",
     "\n",
-    "\n",
-    "\n",
-    "        test_dataset = rasterio.open(test_files[0])\n",
-    "        assert test_dataset.meta == expected_output_metadata, 'output JPEG has incorrect metadata'\n",
-    "        print_success('Generated image has correct metadata.')\n",
-    "\n",
-    "        reference_dataset = rasterio.open(reference_files[0])\n",
-    "\n",
-    "        ref_image = reference_dataset.read()\n",
-    "        test_image = test_dataset.read()\n",
-    "        assert_array_almost_equal(ref_image, test_image)\n",
-    "        print_success('Generated image contains correct data.')\n",
-    "\n",
+    "        assert_dataset_produced_correct_results(\n",
+    "            test_files[0], expected_output_metadata, reference_files[0], 'JPEG'\n",
+    "        )\n",
     "\n",
     "    print_success('Conversion of MEaSUREs Geotiff to JPEG Success')\n",
     "else:\n",
